--- a/asset/sass/style.scss
+++ b/asset/sass/style.scss
@@ -6,67 +6,167 @@ body{
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-/*------------------------
-main code start here 
--------------------------*/
-#main_video_area{
-   padding: 150px 0px;
-}
-
-.video_item{
-   transition: 0.5s;
-   z-index: 999999999999999;
-   position: relative;
-   box-shadow: 0px 0px 10px rgba(0,0,0,0.6);
-   border-radius: 4px;
-   display: block;
-   margin-bottom: 30px;
-   .video_frame_main{
-      position: relative;
-      cursor: pointer;
-      .video_poster{
-         position: absolute;
-         top: 0;
-         left: 0;
-         height: 100%;
-         width: 100%;
-         z-index: 1;
-         img{
-            width: 100%;
-            height: 100%;
-         }
+#video_pop_main_box{
+  padding: 100px 0px;
+  overflow-x: hidden;
+  .item_video{
+    position: relative;
+    display: block;
+    transition: transform 500ms;
+    padding-bottom: 20px;
+    border-radius: 4px;
+    overflow: hidden;
+    cursor: pointer;
+    &:hover{
+      transform: scale(1.2);
+      z-index: 1;
+      box-shadow: 0px 0px 10px rgba(0,0,0,0.7);
+      .movie_poster{
+        opacity: 0;
+        visibility: hidden;
       }
+      .movie_information_area{
+        display: block;
+      }
+    }
+    .movie_information_area{
+      background: #141414;
+      transition: 0.4s;
+      display: none;
+      .top_link{
+        display: flex;
+        padding: 16px 10px 10px 10px;
+        justify-content: space-between;
+        align-items: center;
+        .left_link{
+          ul{
+            li{
+              display: inline-block;
+              margin-right: 6px;
+              a{
+                height: 40px;
+                width: 40px;
+                display: block;
+                border: 1px solid #333;
+                color: #fff;
+                text-align: center;
+                line-height: 40px;
+                font-size: 13px;
+                border-radius: 50%;
+                &:hover{
+                  background-color: #fff;
+                  color: #141414;
+                  border-color: #fff;
+                }
+              }
+            }
+            li:last-child{
+              margin-right: 0px;
+            }
+            .play_btn{
+              a{
+                background: #fff;
+                color: #141414;
+                border-color: #fff;
+              }
+            }
+          }
+        }
+        .right_link{
+          a{
+            height: 40px;
+            width: 40px;
+            display: block;
+            border: 1px solid #333;
+            color: #fff;
+            text-align: center;
+            line-height: 40px;
+            font-size: 16px;
+            border-radius: 50%;
+            &:hover{
+              background-color: #fff;
+              color: #141414;
+              border-color: #fff;
+            }
+          }
+        }
+      }
+      .movie_retting{
+        margin-top: 15px;
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        padding: 0px 10px;
+        .match{
+          h4{
+            color: #43C563;
+            font-weight: 600;
+            font-size: 12px;
+          }
+        }
+        .info{
+          padding-left: 20px;
+          h4{
+            font-weight: 600;
+            font-size: 12px;
+            color: rgba(255, 255, 255, 0.815);
+            span{
+              border: 1px solid rgba(255, 255, 255, 0.74);
+              padding: 3px 6px;
+              margin-right: 10px;
+            }
+          }
+        }
+      }
+      .movie_geners{
+        margin-top: 15px;
+        padding: 0px 10px;
+        ul{
+          li{
+            color: rgba(255, 255, 255, 0.815);
+            display: inline-block;
+            margin-right: 10px;
+            font-weight: 600;
+            font-size: 12px;
+            span{
+              margin-left: 10px;
+              position: relative;
+              top: -2px;
+              font-size: 15px;
+            }
+          }
+        }
+      }
+    }
+  }
+
+
+  //movie_main_box
+  .movie_main_box{
+    position: relative;
+    .movie_poster{
+      position: absolute;
+      height: 100%;
+      width: 100%;
+      top: 0;
+      left: 0;
+      transition: all 0.4s;
+      img{
+        width: 100%;
+        height: 100%;
+        border-radius: 4px 4px 0px 0px;
+      }
+    }
+    .video_frame{
       video{
-         width: 100%    !important;
-         object-fit: fill;
-
+        width: 100%;
+        height: 250px;
+        object-fit: fill;
+        border-radius: 4px 4px 0px 0px;
       }
-   }
+    }
+  }
+
+
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
